{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 32,
  "lineage": "97978cf9-ce9c-15f8-caf2-7ff93133f757",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "database_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/27bc640c-c9a8-4e69-829d-a9814bec414f/resourceGroups/costco-logistics-fulfillment-resource-group/providers/Microsoft.Network/networkInterfaces/costco-logistics-fulfillment-db-nic",
            "internal_domain_name_suffix": "emmq2dl0o5ru1amy3ejgi34cga.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.3.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/27bc640c-c9a8-4e69-829d-a9814bec414f/resourceGroups/costco-logistics-fulfillment-resource-group/providers/Microsoft.Network/publicIPAddresses/costco-logistics-fulfillment-db-public-ip",
                "subnet_id": "/subscriptions/27bc640c-c9a8-4e69-829d-a9814bec414f/resourceGroups/costco-logistics-fulfillment-resource-group/providers/Microsoft.Network/virtualNetworks/costco-logistics-fulfillment-vnet/subnets/costco-logistics-fulfillment-database-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "mac_address": "00-22-48-26-33-7D",
            "name": "costco-logistics-fulfillment-db-nic",
            "private_ip_address": "10.0.3.4",
            "private_ip_addresses": [
              "10.0.3.4"
            ],
            "resource_group_name": "costco-logistics-fulfillment-resource-group",
            "virtual_machine_id": "/subscriptions/27bc640c-c9a8-4e69-829d-a9814bec414f/resourceGroups/costco-logistics-fulfillment-resource-group/providers/Microsoft.Compute/virtualMachines/costco-logistics-fulfillment-db-vm"
          },
          "dependencies": [
            "azurerm_public_ip.database_public_ip",
            "azurerm_resource_group.costco_logistics_fulfillment_rg",
            "azurerm_subnet.database_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "frontend_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/27bc640c-c9a8-4e69-829d-a9814bec414f/resourceGroups/costco-logistics-fulfillment-resource-group/providers/Microsoft.Network/networkInterfaces/costco-logistics-fulfillment-frontend-nic-1",
            "internal_domain_name_suffix": "emmq2dl0o5ru1amy3ejgi34cga.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/27bc640c-c9a8-4e69-829d-a9814bec414f/resourceGroups/costco-logistics-fulfillment-resource-group/providers/Microsoft.Network/publicIPAddresses/costco-logistics-fulfillment-frontend-public-ip-1",
                "subnet_id": "/subscriptions/27bc640c-c9a8-4e69-829d-a9814bec414f/resourceGroups/costco-logistics-fulfillment-resource-group/providers/Microsoft.Network/virtualNetworks/costco-logistics-fulfillment-vnet/subnets/costco-logistics-fulfillment-frontend-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "mac_address": "00-22-48-27-FD-FB",
            "name": "costco-logistics-fulfillment-frontend-nic-1",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "costco-logistics-fulfillment-resource-group",
            "virtual_machine_id": "/subscriptions/27bc640c-c9a8-4e69-829d-a9814bec414f/resourceGroups/costco-logistics-fulfillment-resource-group/providers/Microsoft.Compute/virtualMachines/costco-logistics-fulfillment-frontend-vm-1"
          },
          "dependencies": [
            "azurerm_public_ip.frontend_public_ip",
            "azurerm_resource_group.costco_logistics_fulfillment_rg",
            "azurerm_subnet.frontend_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/27bc640c-c9a8-4e69-829d-a9814bec414f/resourceGroups/costco-logistics-fulfillment-resource-group/providers/Microsoft.Network/networkInterfaces/costco-logistics-fulfillment-frontend-nic-2",
            "internal_domain_name_suffix": "emmq2dl0o5ru1amy3ejgi34cga.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/27bc640c-c9a8-4e69-829d-a9814bec414f/resourceGroups/costco-logistics-fulfillment-resource-group/providers/Microsoft.Network/publicIPAddresses/costco-logistics-fulfillment-frontend-public-ip-2",
                "subnet_id": "/subscriptions/27bc640c-c9a8-4e69-829d-a9814bec414f/resourceGroups/costco-logistics-fulfillment-resource-group/providers/Microsoft.Network/virtualNetworks/costco-logistics-fulfillment-vnet/subnets/costco-logistics-fulfillment-frontend-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "mac_address": "60-45-BD-FE-5C-ED",
            "name": "costco-logistics-fulfillment-frontend-nic-2",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "costco-logistics-fulfillment-resource-group",
            "virtual_machine_id": "/subscriptions/27bc640c-c9a8-4e69-829d-a9814bec414f/resourceGroups/costco-logistics-fulfillment-resource-group/providers/Microsoft.Compute/virtualMachines/costco-logistics-fulfillment-frontend-vm-2"
          },
          "dependencies": [
            "azurerm_public_ip.frontend_public_ip",
            "azurerm_resource_group.costco_logistics_fulfillment_rg",
            "azurerm_subnet.frontend_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/27bc640c-c9a8-4e69-829d-a9814bec414f/resourceGroups/costco-logistics-fulfillment-resource-group/providers/Microsoft.Network/networkInterfaces/costco-logistics-fulfillment-frontend-nic-3",
            "internal_domain_name_suffix": "emmq2dl0o5ru1amy3ejgi34cga.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/27bc640c-c9a8-4e69-829d-a9814bec414f/resourceGroups/costco-logistics-fulfillment-resource-group/providers/Microsoft.Network/publicIPAddresses/costco-logistics-fulfillment-frontend-public-ip-3",
                "subnet_id": "/subscriptions/27bc640c-c9a8-4e69-829d-a9814bec414f/resourceGroups/costco-logistics-fulfillment-resource-group/providers/Microsoft.Network/virtualNetworks/costco-logistics-fulfillment-vnet/subnets/costco-logistics-fulfillment-frontend-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "mac_address": "00-0D-3A-12-82-74",
            "name": "costco-logistics-fulfillment-frontend-nic-3",
            "private_ip_address": "10.0.2.6",
            "private_ip_addresses": [
              "10.0.2.6"
            ],
            "resource_group_name": "costco-logistics-fulfillment-resource-group",
            "virtual_machine_id": "/subscriptions/27bc640c-c9a8-4e69-829d-a9814bec414f/resourceGroups/costco-logistics-fulfillment-resource-group/providers/Microsoft.Compute/virtualMachines/costco-logistics-fulfillment-frontend-vm-3"
          },
          "dependencies": [
            "azurerm_public_ip.frontend_public_ip",
            "azurerm_resource_group.costco_logistics_fulfillment_rg",
            "azurerm_subnet.frontend_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "loadbalancer_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/27bc640c-c9a8-4e69-829d-a9814bec414f/resourceGroups/costco-logistics-fulfillment-resource-group/providers/Microsoft.Network/networkInterfaces/costco-logistics-fulfillment-lb-nic",
            "internal_domain_name_suffix": "emmq2dl0o5ru1amy3ejgi34cga.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/27bc640c-c9a8-4e69-829d-a9814bec414f/resourceGroups/costco-logistics-fulfillment-resource-group/providers/Microsoft.Network/publicIPAddresses/costco-logistics-fulfillment-lb-public-ip",
                "subnet_id": "/subscriptions/27bc640c-c9a8-4e69-829d-a9814bec414f/resourceGroups/costco-logistics-fulfillment-resource-group/providers/Microsoft.Network/virtualNetworks/costco-logistics-fulfillment-vnet/subnets/costco-logistics-fulfillment-public-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "mac_address": "7C-1E-52-0B-62-5B",
            "name": "costco-logistics-fulfillment-lb-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "costco-logistics-fulfillment-resource-group",
            "virtual_machine_id": "/subscriptions/27bc640c-c9a8-4e69-829d-a9814bec414f/resourceGroups/costco-logistics-fulfillment-resource-group/providers/Microsoft.Compute/virtualMachines/costco-logistics-fulfillment-lb-vm"
          },
          "dependencies": [
            "azurerm_public_ip.loadbalancer_public_ip",
            "azurerm_resource_group.costco_logistics_fulfillment_rg",
            "azurerm_subnet.public_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "database_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/27bc640c-c9a8-4e69-829d-a9814bec414f/resourceGroups/costco-logistics-fulfillment-resource-group/providers/Microsoft.Network/networkSecurityGroups/costco-logistics-fulfillment-database-nsg",
            "location": "eastus",
            "name": "costco-logistics-fulfillment-database-nsg",
            "resource_group_name": "costco-logistics-fulfillment-resource-group",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSHForAnsible",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": null,
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowFrontend",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.2.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.costco_logistics_fulfillment_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "frontend_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/27bc640c-c9a8-4e69-829d-a9814bec414f/resourceGroups/costco-logistics-fulfillment-resource-group/providers/Microsoft.Network/networkSecurityGroups/costco-logistics-fulfillment-frontend-nsg",
            "location": "eastus",
            "name": "costco-logistics-fulfillment-frontend-nsg",
            "resource_group_name": "costco-logistics-fulfillment-resource-group",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSHForAnsible",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": null,
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowLoadBalancer",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.costco_logistics_fulfillment_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "public_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/27bc640c-c9a8-4e69-829d-a9814bec414f/resourceGroups/costco-logistics-fulfillment-resource-group/providers/Microsoft.Network/networkSecurityGroups/costco-logistics-fulfillment-public-nsg",
            "location": "eastus",
            "name": "costco-logistics-fulfillment-public-nsg",
            "resource_group_name": "costco-logistics-fulfillment-resource-group",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSHForAnsible",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": null,
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTP",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.costco_logistics_fulfillment_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "database_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/27bc640c-c9a8-4e69-829d-a9814bec414f/resourceGroups/costco-logistics-fulfillment-resource-group/providers/Microsoft.Network/publicIPAddresses/costco-logistics-fulfillment-db-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.191.104.100",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "costco-logistics-fulfillment-db-public-ip",
            "resource_group_name": "costco-logistics-fulfillment-resource-group",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.costco_logistics_fulfillment_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "frontend_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/27bc640c-c9a8-4e69-829d-a9814bec414f/resourceGroups/costco-logistics-fulfillment-resource-group/providers/Microsoft.Network/publicIPAddresses/costco-logistics-fulfillment-frontend-public-ip-1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.172.210.141",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "costco-logistics-fulfillment-frontend-public-ip-1",
            "resource_group_name": "costco-logistics-fulfillment-resource-group",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.costco_logistics_fulfillment_rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/27bc640c-c9a8-4e69-829d-a9814bec414f/resourceGroups/costco-logistics-fulfillment-resource-group/providers/Microsoft.Network/publicIPAddresses/costco-logistics-fulfillment-frontend-public-ip-2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.190.163.232",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "costco-logistics-fulfillment-frontend-public-ip-2",
            "resource_group_name": "costco-logistics-fulfillment-resource-group",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.costco_logistics_fulfillment_rg"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/27bc640c-c9a8-4e69-829d-a9814bec414f/resourceGroups/costco-logistics-fulfillment-resource-group/providers/Microsoft.Network/publicIPAddresses/costco-logistics-fulfillment-frontend-public-ip-3",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.172.209.87",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "costco-logistics-fulfillment-frontend-public-ip-3",
            "resource_group_name": "costco-logistics-fulfillment-resource-group",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.costco_logistics_fulfillment_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "loadbalancer_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/27bc640c-c9a8-4e69-829d-a9814bec414f/resourceGroups/costco-logistics-fulfillment-resource-group/providers/Microsoft.Network/publicIPAddresses/costco-logistics-fulfillment-lb-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.121.182.122",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "costco-logistics-fulfillment-lb-public-ip",
            "resource_group_name": "costco-logistics-fulfillment-resource-group",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.costco_logistics_fulfillment_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "database_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/27bc640c-c9a8-4e69-829d-a9814bec414f/resourceGroups/costco-logistics-fulfillment-resource-group/providers/Microsoft.Network/virtualNetworks/costco-logistics-fulfillment-vnet/subnets/costco-logistics-fulfillment-database-subnet",
            "name": "costco-logistics-fulfillment-database-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "costco-logistics-fulfillment-resource-group",
            "virtual_network_name": "costco-logistics-fulfillment-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.costco_logistics_fulfillment_rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "frontend_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/27bc640c-c9a8-4e69-829d-a9814bec414f/resourceGroups/costco-logistics-fulfillment-resource-group/providers/Microsoft.Network/virtualNetworks/costco-logistics-fulfillment-vnet/subnets/costco-logistics-fulfillment-frontend-subnet",
            "name": "costco-logistics-fulfillment-frontend-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "costco-logistics-fulfillment-resource-group",
            "virtual_network_name": "costco-logistics-fulfillment-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.costco_logistics_fulfillment_rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/27bc640c-c9a8-4e69-829d-a9814bec414f/resourceGroups/costco-logistics-fulfillment-resource-group/providers/Microsoft.Network/virtualNetworks/costco-logistics-fulfillment-vnet/subnets/costco-logistics-fulfillment-public-subnet",
            "name": "costco-logistics-fulfillment-public-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "costco-logistics-fulfillment-resource-group",
            "virtual_network_name": "costco-logistics-fulfillment-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.costco_logistics_fulfillment_rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "database_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/27bc640c-c9a8-4e69-829d-a9814bec414f/resourceGroups/costco-logistics-fulfillment-resource-group/providers/Microsoft.Network/virtualNetworks/costco-logistics-fulfillment-vnet/subnets/costco-logistics-fulfillment-database-subnet",
            "network_security_group_id": "/subscriptions/27bc640c-c9a8-4e69-829d-a9814bec414f/resourceGroups/costco-logistics-fulfillment-resource-group/providers/Microsoft.Network/networkSecurityGroups/costco-logistics-fulfillment-database-nsg",
            "subnet_id": "/subscriptions/27bc640c-c9a8-4e69-829d-a9814bec414f/resourceGroups/costco-logistics-fulfillment-resource-group/providers/Microsoft.Network/virtualNetworks/costco-logistics-fulfillment-vnet/subnets/costco-logistics-fulfillment-database-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.database_nsg",
            "azurerm_resource_group.costco_logistics_fulfillment_rg",
            "azurerm_subnet.database_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "frontend_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/27bc640c-c9a8-4e69-829d-a9814bec414f/resourceGroups/costco-logistics-fulfillment-resource-group/providers/Microsoft.Network/virtualNetworks/costco-logistics-fulfillment-vnet/subnets/costco-logistics-fulfillment-frontend-subnet",
            "network_security_group_id": "/subscriptions/27bc640c-c9a8-4e69-829d-a9814bec414f/resourceGroups/costco-logistics-fulfillment-resource-group/providers/Microsoft.Network/networkSecurityGroups/costco-logistics-fulfillment-frontend-nsg",
            "subnet_id": "/subscriptions/27bc640c-c9a8-4e69-829d-a9814bec414f/resourceGroups/costco-logistics-fulfillment-resource-group/providers/Microsoft.Network/virtualNetworks/costco-logistics-fulfillment-vnet/subnets/costco-logistics-fulfillment-frontend-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.frontend_nsg",
            "azurerm_resource_group.costco_logistics_fulfillment_rg",
            "azurerm_subnet.frontend_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "public_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/27bc640c-c9a8-4e69-829d-a9814bec414f/resourceGroups/costco-logistics-fulfillment-resource-group/providers/Microsoft.Network/virtualNetworks/costco-logistics-fulfillment-vnet/subnets/costco-logistics-fulfillment-public-subnet",
            "network_security_group_id": "/subscriptions/27bc640c-c9a8-4e69-829d-a9814bec414f/resourceGroups/costco-logistics-fulfillment-resource-group/providers/Microsoft.Network/networkSecurityGroups/costco-logistics-fulfillment-public-nsg",
            "subnet_id": "/subscriptions/27bc640c-c9a8-4e69-829d-a9814bec414f/resourceGroups/costco-logistics-fulfillment-resource-group/providers/Microsoft.Network/virtualNetworks/costco-logistics-fulfillment-vnet/subnets/costco-logistics-fulfillment-public-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.public_nsg",
            "azurerm_resource_group.costco_logistics_fulfillment_rg",
            "azurerm_subnet.public_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "0d0e1923-777a-4de3-8198-e9126477c230",
            "id": "/subscriptions/27bc640c-c9a8-4e69-829d-a9814bec414f/resourceGroups/costco-logistics-fulfillment-resource-group/providers/Microsoft.Network/virtualNetworks/costco-logistics-fulfillment-vnet",
            "location": "eastus",
            "name": "costco-logistics-fulfillment-vnet",
            "resource_group_name": "costco-logistics-fulfillment-resource-group",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/27bc640c-c9a8-4e69-829d-a9814bec414f/resourceGroups/costco-logistics-fulfillment-resource-group/providers/Microsoft.Network/virtualNetworks/costco-logistics-fulfillment-vnet/subnets/costco-logistics-fulfillment-public-subnet",
                "name": "costco-logistics-fulfillment-public-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/27bc640c-c9a8-4e69-829d-a9814bec414f/resourceGroups/costco-logistics-fulfillment-resource-group/providers/Microsoft.Network/networkSecurityGroups/costco-logistics-fulfillment-public-nsg"
              },
              {
                "address_prefixes": [
                  "10.0.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/27bc640c-c9a8-4e69-829d-a9814bec414f/resourceGroups/costco-logistics-fulfillment-resource-group/providers/Microsoft.Network/virtualNetworks/costco-logistics-fulfillment-vnet/subnets/costco-logistics-fulfillment-frontend-subnet",
                "name": "costco-logistics-fulfillment-frontend-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/27bc640c-c9a8-4e69-829d-a9814bec414f/resourceGroups/costco-logistics-fulfillment-resource-group/providers/Microsoft.Network/networkSecurityGroups/costco-logistics-fulfillment-frontend-nsg"
              },
              {
                "address_prefixes": [
                  "10.0.3.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/27bc640c-c9a8-4e69-829d-a9814bec414f/resourceGroups/costco-logistics-fulfillment-resource-group/providers/Microsoft.Network/virtualNetworks/costco-logistics-fulfillment-vnet/subnets/costco-logistics-fulfillment-database-subnet",
                "name": "costco-logistics-fulfillment-database-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/27bc640c-c9a8-4e69-829d-a9814bec414f/resourceGroups/costco-logistics-fulfillment-resource-group/providers/Microsoft.Network/networkSecurityGroups/costco-logistics-fulfillment-database-nsg"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.costco_logistics_fulfillment_rg"
          ]
        }
      ]
    }
  ]
}